Changed text in header

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <header>
         <div id="header-text-info">
-            <h1 class="header-text">Denis<br>Novik</h1>
+            <h1 class="header-text">Diana<br>Novik</h1>
             <span class="default-text" >UX | UI designer<br>24 years old, Minsk</span>
             <div class="vertical"> 
                 <span>RU</span>
