Finished site styling

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <ul id="programms">
             <li class="programm">
                 <img src="/images/Ps.svg" alt="Adobe Photoshop">
-                <span class="skill-title">Adobe<br>Photoshop</span>
+                <span class="programm-title">Adobe<br>Photoshop</span>
                 <div class="skill-estimation">
                     <img class="star on"  src="/images/Star.svg" alt="Highlited star">
                     <img class="star on"  src="/images/Star.svg" alt="Highlited star">
@@ -41,7 +41,7 @@
             </li>
             <li class="programm">
                 <img src="/images/Ai.svg" alt="Adobe Illustrator">
-                <span class="skill-title">Adobe<br>Illustrator</span>
+                <span class="programm-title">Adobe<br>Illustrator</span>
                 <div class="skill-estimation">
                     <img class="star on"  src="/images/Star.svg" alt="Highlited star">
                     <img class="star on"  src="/images/Star.svg" alt="Highlited star">
@@ -52,7 +52,7 @@
             </li>
             <li class="programm">
                 <img src="/images/Ae.svg" alt="Adobe After Effects">
-                <span class="skill-title">Adobe<br>After Effects</span>
+                <span class="programm-title">Adobe<br>After Effects</span>
                 <div class="skill-estimation">
                     <img class="star on"  src="/images/Star.svg" alt="Highlited star">
                     <img class="star on"  src="/images/Star.svg" alt="Highlited star">
@@ -63,7 +63,7 @@
             </li>
             <li class="programm">
                 <img src="/images/Figma.svg" alt="Figma">
-                <span class="skill-title">Figma</span>
+                <span class="programm-title">Figma</span>
                 <div class="skill-estimation">
                     <img class="star on"  src="/images/Star.svg" alt="Highlited star">
                     <img class="star on"  src="/images/Star.svg" alt="Highlited star">
@@ -98,16 +98,16 @@
             <a id="contact-button" href="#">Send message</a>
             <ul id="links">
                 <li class="social-media-link">
-                    <a class="linkedin-icon" href=""></a>
+                    <a class="linkedin-icon" href="#"></a>
                 </li>
                 <li class="social-media-link">
-                    <a class="instagram-icon link-icon" href=""></a>
+                    <a class="instagram-icon link-icon" href="#"></a>
                 </li>
                 <li class="social-media-link">
-                    <a class="behance-icon link-icon" href=""></a>
+                    <a class="behance-icon link-icon" href="#"></a>
                 </li>
                 <li class="social-media-link">
-                    <a class="strange-icon link-icon" href=""></a>
+                    <a class="strange-icon link-icon" href="#"></a>
                 </li>
             </ul>
             <p class="default-text footer-text">Like me on<br>LinkedIn, Instagram, Behance, Dribble</p>
