Got rid of ids, added mixin

--- a/index.html
+++ b/index.html
@@ -2,80 +2,79 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="defaultStyles.css">
 </head>
 <body>
     <header>
-        <div id="header-text-info">
+        <div class="header-text-info">
             <h1 class="header-text">Diana<br>Novik</h1>
             <span class="default-text" >UX | UI designer<br>24 years old, Minsk</span>
-            <div class="vertical"> 
-                <span>RU</span>
-                <span>|</span>
-                <span>ENG</span>
+            <div class="vertical-text"> 
+                <span>|ENG</span>
             </div>
         </div>
         <div class="header-image"></div>
     </header>
-    <section id="about-me">
-        <div id="info">
+    <section class="section-about-me">
+        <div class="about-me-info">
             <h2 class="title-text">About me</h2>
-            <p class="default-text">Hi, I'm Denis – UX/UI designer from Minsk. I'm interested in design and everything connected with it.</p>
+            <p class="default-text">Hi, I'm Diana – UX/UI designer from Minsk. I'm interested in design and everything connected with it.</p>
             <p class="default-text">I'm studying at courses "Web and mobile design interfaces" in IT-Academy.</p>
             <p class="default-text">Ready to implement excellent projects with wonderful people.</p>
         </div>
     </section>
-    <section id="skills">
+    <section class="section-skills">
         <h2 class="title-text">Skills</h2>
         <p class="default-text">I work in such programs as</p>
-        <ul id="programms">
+        <ul class="programms-list">
             <li class="programm">
                 <img src="/images/Ps.svg" alt="Adobe Photoshop">
                 <span class="programm-title">Adobe<br>Photoshop</span>
                 <div class="skill-estimation">
-                    <img class="star on"  src="/images/Star.svg" alt="Highlited star">
-                    <img class="star on"  src="/images/Star.svg" alt="Highlited star">
-                    <img class="star on"  src="/images/Star.svg" alt="Highlited star">
-                    <img class="star on"  src="/images/Star.svg" alt="Highlited star">
-                    <img class="star off"  src="/images/Star.svg" alt="Faded star">
+                    <img class="star filled"  src="/images/Star.svg" alt="Highlited star">
+                    <img class="star filled"  src="/images/Star.svg" alt="Highlited star">
+                    <img class="star filled"  src="/images/Star.svg" alt="Highlited star">
+                    <img class="star filled"  src="/images/Star.svg" alt="Highlited star">
+                    <img class="star empty"  src="/images/Star.svg" alt="Faded star">
                 </div>
             </li>
             <li class="programm">
                 <img src="/images/Ai.svg" alt="Adobe Illustrator">
                 <span class="programm-title">Adobe<br>Illustrator</span>
                 <div class="skill-estimation">
-                    <img class="star on"  src="/images/Star.svg" alt="Highlited star">
-                    <img class="star on"  src="/images/Star.svg" alt="Highlited star">
-                    <img class="star on"  src="/images/Star.svg" alt="Highlited star">
-                    <img class="star off"  src="/images/Star.svg" alt="Highlited star">
-                    <img class="star off"  src="/images/Star.svg" alt="Faded star">
+                    <img class="star filled"  src="/images/Star.svg" alt="Highlited star">
+                    <img class="star filled"  src="/images/Star.svg" alt="Highlited star">
+                    <img class="star filled"  src="/images/Star.svg" alt="Highlited star">
+                    <img class="star empty"  src="/images/Star.svg" alt="Highlited star">
+                    <img class="star empty"  src="/images/Star.svg" alt="Faded star">
                 </div>
             </li>
             <li class="programm">
                 <img src="/images/Ae.svg" alt="Adobe After Effects">
                 <span class="programm-title">Adobe<br>After Effects</span>
                 <div class="skill-estimation">
-                    <img class="star on"  src="/images/Star.svg" alt="Highlited star">
-                    <img class="star on"  src="/images/Star.svg" alt="Highlited star">
-                    <img class="star on"  src="/images/Star.svg" alt="Highlited star">
-                    <img class="star on"  src="/images/Star.svg" alt="Highlited star">
-                    <img class="star off"  src="/images/Star.svg" alt="Faded star">
+                    <img class="star filled"  src="/images/Star.svg" alt="Highlited star">
+                    <img class="star filled"  src="/images/Star.svg" alt="Highlited star">
+                    <img class="star filled"  src="/images/Star.svg" alt="Highlited star">
+                    <img class="star filled"  src="/images/Star.svg" alt="Highlited star">
+                    <img class="star empty"  src="/images/Star.svg" alt="Faded star">
                 </div>
             </li>
             <li class="programm">
                 <img src="/images/Figma.svg" alt="Figma">
                 <span class="programm-title">Figma</span>
                 <div class="skill-estimation">
-                    <img class="star on"  src="/images/Star.svg" alt="Highlited star">
-                    <img class="star on"  src="/images/Star.svg" alt="Highlited star">
-                    <img class="star on"  src="/images/Star.svg" alt="Highlited star">
-                    <img class="star on"  src="/images/Star.svg" alt="Highlited star">
-                    <img class="star off"  src="/images/Star.svg" alt="Faded star">
+                    <img class="star filled"  src="/images/Star.svg" alt="Highlited star">
+                    <img class="star filled"  src="/images/Star.svg" alt="Highlited star">
+                    <img class="star filled"  src="/images/Star.svg" alt="Highlited star">
+                    <img class="star filled"  src="/images/Star.svg" alt="Highlited star">
+                    <img class="star empty"  src="/images/Star.svg" alt="Faded star">
                 </div>
             </li>
         </ul>
     </section>
-    <section id="portfolio" >
-        <div id="portfolio-items">
+    <section class="portfolio-section" >
+        <div class="portfolio-items-list">
             <h2 class="title-text">Portfolio</h2>
             <div class="portfolio-item">
                 <img src="/images/fashionStore.png" alt="Fashion store">
@@ -92,11 +91,11 @@
         </div>
     </section>
     <footer>
-        <div id="contacts">
+        <div class="footer-contacts">
             <h2 class="title-text">Contacts</h2>
             <p class="default-text">Want to know more or just chat?<br>You are welcome!</p>
-            <a id="contact-button" href="#">Send message</a>
-            <ul id="links">
+            <a class="contact-button" href="#">Send message</a>
+            <ul class="contact-links-list">
                 <li class="social-media-link">
                     <a class="linkedin-icon" href="#"></a>
                 </li>
